--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
             </nav>
         </div> -->
     </header>
-    <main>
+    <main class="main">
         <section class="main_part">
-            <h1 class="title_1">Prueba Premium gratis 3 meses</h1>
-            <p>
+            <h1 class="title_1"><strong>Prueba Premium gratis 3 meses</strong></h1>
+            <p class="subtitle">
                 Escucha millones de canciones sin anuncios, a la carta y sin conexion.
             </p>
-            <p>
+            <button class="button">Ver Planes</button>
+            <p class="terms">
                 Rigen términos y condiciones. Los tres meses gratis no están disponibles
                 para usuarios que ya hayan probado Premium.
             </p>
@@ -54,7 +55,29 @@
             <p>Sin anuncios. Disfruta de música sin interrupciones.</p>
             <p>Escucha lo que quieras. Incluso en el móvil.</p>
             <p>Salta todas las canciones que quieras. Simplemente dale a siguiente.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, exercitationem! Dolores neque cupiditate
+                quas, adipisci eligendi eveniet corrupti repellat commodi laborum? Reprehenderit ratione itaque veniam
+                enim, corrupti ipsum illo quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, a
+                nihil culpa, unde repellendus quia similique, eum dicta illo harum ad eos minima aut est excepturi id
+                consectetur dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia autem optio dolorem,
+                temporibus ipsum voluptatum dolores! Laudantium placeat expedita labore molestiae dicta vel voluptas
+                unde? Rem esse vero dolores dolore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, exercitationem! Dolores neque cupiditate
+                quas, adipisci eligendi eveniet corrupti repellat commodi laborum? Reprehenderit ratione itaque veniam
+                enim, corrupti ipsum illo quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, a
+                nihil culpa, unde repellendus quia similique, eum dicta illo harum ad eos minima aut est excepturi id
+                consectetur dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia autem optio dolorem,
+                temporibus ipsum voluptatum dolores! Laudantium placeat expedita labore molestiae dicta vel voluptas
+                unde? Rem esse vero dolores dolore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, exercitationem! Dolores neque cupiditate
+                quas, adipisci eligendi eveniet corrupti repellat commodi laborum? Reprehenderit ratione itaque veniam
+                enim, corrupti ipsum illo quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, a
+                nihil culpa, unde repellendus quia similique, eum dicta illo harum ad eos minima aut est excepturi id
+                consectetur dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia autem optio dolorem,
+                temporibus ipsum voluptatum dolores! Laudantium placeat expedita labore molestiae dicta vel voluptas
+                unde? Rem esse vero dolores dolore.</p>
         </section>
+
     </main>
     <footer>
         Legal Cookies Información sobre los anuncios España 2019 Spotify AB
